@@ -4,10 +4,13 @@ AUTOMAKE_OPTIONS = foreign # don't fuss about GNU required files
 
 INCLUDES = -I$(top_srcdir)/common -I$(top_srcdir)/include
 
-noinst_PROGRAMS = nettest omprogsrv
+## Test programs to run
+TESTS = nettest
+
+check_PROGRAMS = nettest omprogsrv
 
 nettest_SOURCES = nettest.cc
-nettest_LDADD = ../libomus.la
+nettest_LDADD = ../libomus.la ../testsuite/libtest.la
 
 omprogsrv_SOURCES = omprogsrv.cc
 omprogsrv_LDADD = ../libomus.la
